<resources>
    <string name="app_name">LightPuzzle</string>
    <string name="app_introduction">Welcome !!!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="material_list">模板列表</string>

    <!-- MaterialListActivity -->
    <string name="material_list_aty_nav_home">Home</string>
    <string name="material_list_aty_nav_donate">Donate</string>
    <string name="material_list_aty_nav_settings">Settings</string>

    <string name="template_category_simple">Simple</string>
    <string name="template_category_memo">Memo</string>
    <string name="template_category_seamless">Seamless</string>
    <string name="template_category_wallpaper">Wallpaper</string>
    <string name="template_category_collage">Collage</string>
    <string name="template_category_cover">Cover</string>
    <string name="template_category_postcard">Postcard</string>
    <string name="template_category_business_card">Card</string>
    <string name="template_category_long_collage">Long Collage</string>
    <string name="template_category_layout">Layout</string>
    <!-- Additional -->
    <string name="template_category_favorite">Favorite</string>
    <string name="template_category_history">History</string>

    <string name="downloaded_list_aty_name">Downloaded</string>
    <string name="downloaded_list_aty_delete">delete</string>
    <string name="downloaded_list_aty_management">Management</string>


    <!-- PhotoPickerActivity -->
    <string name="photo_picker_aty_photo">照片</string>
    <string name="photo_picker_aty_album">相册</string>
    <!-- [Important]: As root album's Id -->
    <string name="photo_picker_aty_all_images">所有图片</string>
    <string name="photo_picker_aty_puzzle_count_tips">最多%1$d张能拼哦</string>
    <string name="photo_picker_aty_next_step">下一步</string>
    <string name="photo_picker_aty_over_max_count_tips">当前已选择了%1$d张图片</string>
    <string name="photo_picker_aty_please_choose_photo">请选择图片</string>


    <string name="puzzletoolbar_filter">滤镜</string>
    <string name="puzzletoolbar_clip">剪辑</string>
    <string name="puzzletoolbar_beauty">美颜</string>
    <string name="puzzletoolbar_replace">替换</string>
    <string name="puzzletoolbar_rotate">旋转</string>
    <string name="puzzletoolbar_sound">原声</string>
    <string name="puzzletoolbar_zoomin">放大</string>
    <string name="puzzletoolbar_zoomout">缩小</string>

    <string name="longpage_layout">布局</string>
    <string name="longpage_line_frame">边框</string>
    <string name="longpage_template">模板</string>
    <string name="longpage_adjust">调整</string>
    <string name="longpage_background">背景</string>
    <string name="longpage_add">添加</string>
    <string name="longpage_text">文本</string>
    <string name="longpage_sign">签名</string>
    <string name="longpage_label">标签</string>
    <string name="longpage_font">字体</string>
    <string name="longpage_color">颜色</string>
    <string name="longpage_size">字号</string>
    <string name="longpage_title">Jane/简·拼</string>

    <string name="clipvideopage_play_at_same_time">同时播放</string>
    <string name="clipvideopage_play_at_order_time">顺序播放</string>

    <!-- editlabelpage -->
    <string name="editlabelpage_title">添加标签</string>
    <string name="editlabelpage_choose_type">请选择标签类型</string>
    <string name="editlabelpage_choose_style">请选择标签样式</string>
    <string name="editlabelpage_content_empty">文字不能为空！</string>
    <string name="editlabelpage_brand">品牌</string>
    <string name="editlabelpage_location">地点</string>
    <string name="editlabelpage_people">人物</string>
    <string name="editlabelpage_price">价格</string>
    <string name="editlabelpage_weather">天气</string>
    <string name="editlabelpage_custom_setting">自定义</string>
    <string name="editlabelpage_hint">请输入文字内容</string>


    <!-- editText -->
    <string name="watermatkedittext_cleartext_tips">是否清除所有文字？</string>
    <string name="watermatkedittext_free_download">免费下载此字体？</string>
    <string name="watermatkedittext_download">下载</string>
    <string name="watermatkedittext_edit">请输入...</string>
    <string name="watermatkedittext_clear_no">否</string>
    <string name="watermatkedittext_clear_yes">是</string>
    <string name="watermatkedittext_cancel">取消</string>

    <string name="translatepage_title">翻译</string>
    <string name="translatepage_translating">翻译中...</string>

</resources>
