<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/material_list_aty_nav_menu_grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/material_list_aty_nav_menu_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/material_list_aty_nav_home" />
        <item
            android:id="@+id/material_list_aty_nav_menu_favorite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/template_category_favorite" />
        <item
            android:id="@+id/material_list_aty_nav_menu_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/template_category_history" />
    </group>

    <group
        android:id="@+id/material_list_aty_nav_menu_grp2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/material_list_aty_nav_menu_donate"
            android:icon="@drawable/ic_local_cafe_black_24dp"
            android:title="@string/material_list_aty_nav_donate" />
        <item
            android:id="@+id/material_list_aty_nav_menu_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/material_list_aty_nav_settings" />
    </group>

</menu>