<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/photo_picker_aty_bg"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/photo_picker_aty_title_bar_bg">

        <ImageButton
            android:id="@+id/photo_picker_aty_ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:src="@drawable/photo_picker_ic_back_selector" />

        <RelativeLayout
            android:id="@+id/photo_picker_aty_rl_photo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="28dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/photo_picker_aty_v_anchor">

            <TextView
                android:id="@+id/photo_picker_aty_tv_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="4dp"
                android:gravity="center"
                android:text="@string/photo_picker_aty_photo"
                android:textColor="@color/photo_picker_aty_text_current_title"
                android:textSize="18sp" />

            <View
                android:id="@+id/photo_picker_v_photo_ind"
                android:layout_width="44dp"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="@color/photo_picker_aty_title_indicator" />
        </RelativeLayout>

        <View
            android:id="@+id/photo_picker_aty_v_anchor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/photo_picker_aty_tv_album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/photo_picker_aty_rl_album"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="32dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/photo_picker_aty_v_anchor">

            <TextView
                android:id="@+id/photo_picker_aty_tv_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="4dp"
                android:gravity="center"
                android:text="@string/photo_picker_aty_album"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <View
                android:id="@+id/photo_picker_v_album_ind"
                android:layout_width="44dp"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="@color/photo_picker_aty_title_indicator"
                android:visibility="gone" />
        </RelativeLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/photo_pager_aty_fl_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:id="@+id/photo_picker_aty_rl_selected_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/photo_picker_aty_select_bg">

        <RelativeLayout
            android:id="@+id/photo_pager_aty_rl_tips_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="6dp">

            <TextView
                android:id="@+id/photo_picker_aty_tv_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/photo_picker_aty_puzzle_count_tips"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/photo_picker_aty_rl_next_step_root"
                android:layout_width="84dp"
                android:layout_height="30dp"
                android:layout_marginRight="12dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/photo_picker_aty_ic_next_step_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_centerVertical="true"
                    android:text="@string/photo_picker_aty_next_step"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/photo_pager_aty_tv_selected_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="11dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="0"
                    android:textColor="@color/photo_picker_aty_text_selected_count" />
            </RelativeLayout>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/photo_pager_aty_rv_selected"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:layout_below="@id/photo_pager_aty_rl_tips_root"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />

    </RelativeLayout>

</LinearLayout>
